Simplified vault certifcate setup, use ca install via mantl     ca_cert = "/etc/pki/tls/certs/ca-bundle.crt"

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,22 @@
-version: '2'
-services:
-  gocd-server:
-    image: c12e/gocd-server
-    environment:
-      - VAULT_TOKEN=${VAULT_TOKEN}
-      - CONSUL_TOKEN=${CONSUL_TOKEN}
-    ports:
-      - 8152:8152
-      - 8153:8153
-      - 8154:8154
-     
-  gocd-agent:
-    image: c12e/gocd-agent
-    privileged: true
-    environment:
-      - VAULT_TOKEN=${VAULT_TOKEN}
-      - CONSUL_TOKEN=${CONSUL_TOKEN}
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-# - /bin/dock.static:/bin/docker 
-    links:
-      - gocd-server:go-server
+gocd-server:
+   image: c12e/gocd-server
+   environment:
+     - VAULT_TOKEN=${VAULT_TOKEN}
+   ports:
+     - 8152:8152
+     - 8153:8153
+     - 8154:8154
+   volumes:
+     - /etc/pki/tls/certs/ca-bundle.crt:/etc/pki/tls/certs/ca-bundle.crt
+
+gocd-agent:
+   image: c12e/gocd-agent
+   privileged: true
+   environment:
+     - VAULT_TOKEN=${VAULT_TOKEN}
+   volumes:
+     - /var/run/docker.sock:/var/run/docker.sock
+     - /bin/dock.static:/bin/docker
+     - /etc/pki/tls/certs/ca-bundle.crt:/etc/pki/tls/certs/ca-bundle.crt
+   links:
+     - gocd-server:go-server
