--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,40 @@
-gocd-server:
-    image: c12e/gocd-server
-    environment:
-      - CONSUL_ADDR=consul.service.consul:8500
-      - VAULT_ADDR=${VAULT_ADDR}
-      - VAULT_TOKEN=${VAULT_TOKEN}
-    ports:
-      - 8152:8152
-      - 8153:8153
-      - 8154:8154
-    volumes:
-      - shared_certs:/cscerts
-gocd-agent:
-   image: c12e/gocd-agent
-   environment:
-     - CONSUL_ADDR=consul.service.consul:8500
-     - VAULT_ADDR=${VAULT_ADDR}
-     - VAULT_TOKEN=${VAULT_TOKEN}
-   volumes:
-     - /var/run/docker.sock:/var/run/docker.sock
-     - /bin/dock.static:/bin/docker
-     - shared_certs:/cscerts
-   links:
-      - gocd-server:go-server
+version: "2"
+services:
+  vault:
+      image: c12e/vault
+      ports:
+        - 8200:8200
+      environment:
+        - MODE=DEV
+      volumes:
+        - shared_certs:/cscerts
+        - private_certs:/private_certs
+
+  gocd-server:
+      image: c12e/gocd-server
+      environment:
+        - VAULT_ADDR=https://vault:8200
+        - VAULT_TOKEN=developer-token-123
+      ports:
+        - 8152:8152
+        - 8153:8153
+        - 8154:8154
+      volumes:
+        - shared_certs:/cscerts
+
+  gocd-agent:
+     image: c12e/gocd-agent
+     environment:
+        - VAULT_ADDR=https://vault:8200
+        - VAULT_TOKEN=developer-token-123
+     volumes:
+       - /var/run/docker.sock:/var/run/docker.sock
+       - /bin/dock.static:/bin/docker
+       - shared_certs:/cscerts
+     links:
+        - gocd-server:go-server
+volumes:
+  shared_certs:
+    external: true
+  private_certs:
+    external: true
